added currency format

--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -135,7 +135,7 @@
                                             <td class="numUnits">{{number numUnits}}</td>
                                             <td class="acres">{{number acres}}</td>
                                             <td class="squareFootage">{{number squareFootage}}</td>
-                                            <td class="salePrice">{{number salePrice}}</td>
+                                            <td class="salePrice">${{number salePrice}}</td>
                                             <td class="notes notes-Td-css">{{notes}}</td>
                                         </tr>
                                         {{/each}}
