--- a/views/leaseComps.handlebars
+++ b/views/leaseComps.handlebars
@@ -143,18 +143,18 @@
                                             <td class="owner">{{owner}}</td>
                                             <td class="entered">{{entered}}</td>
                                             <td class="sold">{{sold}}</td>
-                                            <td class="salePrice">{{ number salePrice}}</td>
+                                            <td class="salePrice">${{ number salePrice}}</td>
                                             <td class="buildingSF">{{ number buildingSF}}</td>
                                             <td class="totalAcreage">{{ number totalAcreage}}</td>
-                                            <td class="costPerAcre">{{ number costPerAcre}}</td>
+                                            <td class="costPerAcre">${{ number costPerAcre}}</td>
                                             <td class="numUnits">{{ number numUnits}}</td>
-                                            <td class="costPerUnit">{{ number costPerUnit}}</td>
+                                            <td class="costPerUnit">${{ number costPerUnit}}</td>
                                             <td class="oneBedSF">{{ number oneBedSF}}</td>
                                             <td class="twoBedSF">{{ number twoBedSF}}</td>
                                             <td class="threeBedSF">{{ number threeBedSF}}</td>
-                                            <td class="oneBedRent">{{ number oneBedRent}}</td>
-                                            <td class="twoBedRent">{{ number twoBedRent}}</td>
-                                            <td class="threeBedRent">{{ number threeBedRent}}</td>
+                                            <td class="oneBedRent">${{ number oneBedRent}}</td>
+                                            <td class="twoBedRent">${{ number twoBedRent}}</td>
+                                            <td class="threeBedRent">${{ number threeBedRent}}</td>
                                             <td class="notes notes-Td-css">{{notes}}</td>
                                         </tr>
                                         {{/each}}
