--- a/views/fipmap.handlebars
+++ b/views/fipmap.handlebars
@@ -99,7 +99,7 @@
             </div>
         </nav>
     </div>
-    <div style="height: 100vh">
+    <div>
         <div id="map" class="full-screen-map"></div>
     </div>
 </body>
