--- a/views/compsmap.handlebars
+++ b/views/compsmap.handlebars
@@ -105,7 +105,7 @@
             </div>
         </nav>
     </div>
-    <div>
+    <div style="height: 100vh">
         <div id="map" class="full-screen-map"></div>
     </div>
 </body>
