--- a/views/clemap.handlebars
+++ b/views/clemap.handlebars
@@ -99,7 +99,7 @@
             </div>
         </nav>
     </div>
-    <div>
+    <div style="height: 100vh">
         <div id="map" class="full-screen-map"></div>
     </div>
 </body>
